# quantpulse-pairs-trading

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  L2_OPTIMIZATION_REPORT.md  LICENSE  NoteBook6.ipynb  Notebook6.ipynb  PERFORMANCE_ANALYSIS.md  PERFORMANCE_ANALYSIS_REPORT.md  PERFORMANCE_DETAILED_ANALYSIS.md  PERFORMANCE_REPORT.md  PERFORMANCE_SUMMARY.md  PROJECT_SUMMARY.md  README.md  README_RUN.md  SECURITY.md  USAGE.md  advanced_multi_strategy_backtester.py  bench_harness.py  cal_rdtsc  calibrate_arm64_timer.py  chart_generator.py  extended_universe_backtester.py  kl_elasticnet_optimizer.py  l2_optimization_results_20250831_213715.json  l2_optimizer.py  live_paper_trading_engine.py  native_interface.py  numba_optimizations.py  performance_analyzer.py  performance_profiler.py  performance_report_20250831_220012.json  portfolio_manager.py  production_demo.py  profiled_elasticnet_optimizer.py  pyproject.toml  quantpulse-core.pc.in  (+20 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  performance.md
.github/workflows/: ci-cd.yml
csrc/: cal_rdtsc.cpp  cross_validation.cpp  hft_core.cpp  hft_core_neon.cpp  hft_strategies.cpp  histogram.h  nanoext.c  nanoext_runloop.cpp  nanoext_runloop_corrected.cpp  nanoext_runloop_neon.cpp  neon_kernels.h  optimization_cache.cpp  parallel_cv.cpp  performance_cache.cpp  python_bindings.cpp  quantpulse_core.h  rb_ext.cpp  simd_ops.cpp  simd_ops_backup.cpp  trading_engine.h  vectorized_math.cpp
data/: AAPL_2015-01-01_2020-12-31.npy  AAPL_2018-01-01_2023-12-31.npy  AAPL_2019-01-01_2023-12-31.npy  AAPL_2020-01-01_2023-01-01.npy  AAPL_2023-01-01_2024-01-01.npy  AAPL_MSFT_equity.csv  AAPL_MSFT_trades.csv  AHCO_2015-01-01_2024-12-31.npy  AMD_2020-01-01_2023-12-31.npy  AMX_2015-01-01_2024-12-31.npy  AMX_2016-01-01_2021-12-31.npy  AMX_2018-01-01_2022-12-31.npy  AMX_2018-01-01_2023-12-31.npy  AMX_2019-01-01_2023-12-31.npy  AMX_2020-01-01_2023-01-01.npy  AMX_2020-01-01_2024-01-01.npy  AMZN_2020-01-01_2023-12-31.npy  ARQQ_2015-01-01_2024-12-31.npy  AXL_2015-01-01_2024-12-31.npy  AXL_2016-01-01_2021-12-31.npy  AXL_2018-01-01_2023-12-31.npy  AXL_2019-01-01_2023-12-31.npy  AXL_2020-01-01_2023-01-01.npy  AXL_2020-01-01_2024-01-01.npy  BAC_2019-01-01_2023-12-31.npy  CRVL_2015-01-01_2024-12-31.npy  CVX_2018-01-01_2023-12-31.npy  EWG_2020-01-01_2023-12-31.npy  EWJ_2020-01-01_2023-12-31.npy  GF_2015-01-01_2024-12-31.npy  GF_2018-01-01_2022-12-31.npy  GF_2018-01-01_2023-12-31.npy  GF_2019-01-01_2023-12-31.npy  GF_2020-01-01_2023-01-01.npy  GF_2020-01-01_2024-01-01.npy  GLD_2018-01-01_2023-12-31.npy  GLD_2020-01-01_2023-12-31.npy  GOOGL_2020-01-01_2023-12-31.npy  GOOGL_AMZN_equity.csv  GOOGL_AMZN_trades.csv  (+33 more)
fpga/: README.md
fpga/hls/: rolling_stats.cpp
hft_engine/: engine.py
md/: CLEANUP_SUMMARY.md  INTEGRATION_COMPLETE.md  PERFORMANCE_REPORT.md  PROJECT_SUMMARY.md
osrc/: README.md  cross_validation.ml  dune-project  ocaml_bindings.ml  performance_cache.ml  trading_engine.ml  trading_engine.mli  vectorized_math.ml
performance/: elasticnet_kl_results_20250831_215439.json  elasticnet_kl_results_20250831_220341.json  performance_report_20250831_220341.json
quantpulse/: __init__.py  analytics.py  backtesting.py  data_manager.py  execution.py  strategies.py  utils.py  visualization.py
src/: arbitrage.py  backtester.py  demo.py  hft_optimized.py  livetrader.py  nanosecond_hft.py  nanosecond_optimized.py  pipeline.py  trading.py  trading_cpp_loop.py  trading_profiler.py  trading_ultra.py  universe.py
tests/: test_consistency.py  test_nanoext_inc.py
